# mnemo-mcp

./: .gitignore  .mcp.json  CHANGELOG.md  CONNECTORS.md  LICENSE  README.md  pyproject.toml  requirements.txt
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
commands/: memory-build.md  memory-map.md  memory-status.md  memory.md
mnemo/: __init__.py  cli.py  server.py
mnemo/core/: __init__.py  config.py  digest.py  extract.py  graph.py  index.py  ingest.py  lifecycle.py  ollama_client.py  pipeline.py  platform_tuning.py  render.py  reuse.py  store.py  updater.py
scripts/: install.sh
skills/memory/: SKILL.md
templates/: mindmap.html.j2
tests/: mcp_stdio_check.py  test_smoke.py
