[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mnemo-mcp"
version = "0.1.7"
description = "Local, token-free, graph-based project memory for Claude (MCP plugin)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "GRU-953" }]
keywords = ["memory", "knowledge-graph", "mind-map", "local-llm", "ollama", "mcp", "rag"]
dependencies = [
  "mcp>=1.8.0",
  "markitdown[pdf,docx,pptx,xlsx,xls]>=0.1.1,<0.2.0",
  "pypdfium2>=4.0.0",
  "Pillow>=10.0.0",
  "requests>=2.31.0",
  "numpy>=1.26.0",
  "jinja2>=3.1.0",
]

[project.optional-dependencies]
audio = ["faster-whisper>=1.0.0"]

[project.urls]
Homepage = "https://github.com/GRU-953/mnemo-mcp"
Repository = "https://github.com/GRU-953/mnemo-mcp"

# `mnemo` becomes a command after `pip install -e .`
[project.scripts]
mnemo = "mnemo.cli:main"

[tool.setuptools]
packages = ["mnemo", "mnemo.core"]
